<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/username_instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="start"
                android:text="@string/username_hint"/>

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:inputType="text"
                android:hint="@string/username"
                android:autofillHints="@string/username"/>

            <TextView
                android:id="@+id/killcode_instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/killcode_instruction"/>

            <EditText
                android:id="@+id/killcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:inputType="number"
                android:hint="@string/victim_killcode"
                android:autofillHints="@string/victim_killcode"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_register_kill"
                android:id="@+id/button_confirm_kill"
                android:layout_gravity="center"/>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>